<resources>
    <string name="app_name">HathMe Merchant</string>
    <string name="somethingError">Something error</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="digits_branch">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890,.</string>
    <string name="digit_alphabet">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_without_space">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890</string>
    <string name="noInternetConnection">No internet connection</string>
    <string name="pleaseWait">Please wait</string>
    <string name="continuee">Continue</string>
    <string name="rateCustomer">Rate Customer</string>
    <string name="rupeeSymbol">₹</string>
    <string name="dontHaveAcount">Don\'t have Account?</string>
    <string name="register">Register</string>
    <string name="loginWithFacebook">Login with Facebook</string>
    <string name="loginWithGoogle">Login with Google</string>
    <string name="or">Or</string>
    <string name="ok">OK</string>
    <string name="loginNow">Login Now</string>
    <string name="registerNow">Register Now</string>
    <string name="name">Name</string>
    <string name="file_size">File Size Long</string>
    <string name="mobile">Mobile</string>
    <string name="emailId">Email Id</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="referralCodeOpt">Referral Code(Optional)</string>
    <string name="getStarted">Get Started</string>
    <string name="byRegistering">By Registering, I agree to Hathme’s</string>
    <string name="termsConditions"><![CDATA[Terms & Conditions]]></string>
    <string name="submit">Submit</string>
    <string name="forgotPasswordQ">Forgot Password?</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="mobileVerification">Mobile Verification</string>
    <string name="pinVerify">Pin Verify</string>
    <string name="otpSentTo">OTP Sent to</string>
    <string name="generatePin">Generate Pin</string>
    <string name="setPin">Set Pin</string>
    <string name="enterPin">Enter Pin</string>
    <string name="enter4DigitPin">Enter 4 digit Pin</string>
    <string name="confirmPin">Confirm Pin</string>
    <string name="selectYourCategory">Select Your Category</string>
    <string name="restaurants">Restaurants</string>
    <string name="goWithRestaurant">Go with Restaurant</string>
    <string name="GoWithThisStore">Go with this Store</string>
    <string name="menu">Menu</string>
    <string name="sales">Sales</string>
    <string name="campaigns">Campaigns</string>
    <string name="more">More</string>
    <string name="mobileWhatsApp">Mobile or Whatsapp Number</string>
    <string name="addProducts">Add\nProducts</string>
    <string name="getMoreOrdersFrom">Get more orders from HathMe</string>
    <string name="kindlyUpdateHighPhoto">Kindly Upload high definition photo &amp; specifications of all your products.</string>
    <string name="dailyReview">Daily Review</string>
    <string name="reviews">Reviews</string>
    <string name="modelNotPersent">Model not persent for this category</string>
    <string name="onGoing">On Going</string>
    <string name="faqs">FAQs</string>
    <string name="whatHathMeCustomer">What is HathMe Customer Care Number?</string>
    <string name="viewActivity">View Activity</string>
    <string name="totalOrders">Total Orders</string>
    <string name="rejectedOrders">Rejected Orders</string>
    <string name="paymentModes">Payment Modes</string>
    <string name="creditDebitAccount">Credit/Debit Card, Bank Account Details</string>
    <string name="salesInsight">Sales Insight</string>
    <string name="overViewBusinessAnalysis">Overview of Your Business, Analysis of Your Sales</string>
    <string name="hathMeMoney">HathMe Money</string>
    <string name="viewAccountBalance"><![CDATA[View Account Balance & Transaction History]]></string>
    <string name="productManagement">Product Management</string>
    <string name="Insights">Insights</string>
    <string name="productViewEdit">Product view, Edit Products, Sub Categories</string>
    <string name="trackOrderDetails">Track Order Details</string>
    <string name="preparingReady">Preparing, Ready, Picked up</string>
    <string name="about">About</string>
    <string name="giveRating"><![CDATA[Give Rating & Review]]></string>
    <string name="viewCustomerFeedback">View Customer Feedback</string>
    <string name="rateUsPlayStore">Rate us on the play store</string>
    <string name="logout">Logout</string>
    <string name="addProduct">Add Product</string>
    <string name="editProfile">Edit Profile</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="currentAmount">Current Amount</string>
    <string name="viewRatingReviews"><![CDATA[View Rating & Reviews]]></string>
    <string name="yourPortfolio">Your Portfolio</string>
    <string name="deliveredOrders">Delivered Orders</string>
    <string name="yourSales">Your Sales</string>
    <string name="todaysRevenue">Today\'s Revenue</string>
    <string name="lossCancellation">Loss from cancellations</string>
    <string name="preparing">Preparing</string>
    <string name="ready">Ready</string>
    <string name="pickedUp">Picked Up</string>
    <string name="rapidoDelivery">Rapido Delivery</string>
    <string name="placed">Placed</string>
    <string name="accepted">Accepted</string>
    <string name="totalBill">Total bill</string>
    <string name="paid">Paid</string>
    <string name="orderReady">Order Ready</string>
    <string name="deliveryPersonDetails">Delivery Person Details</string>
    <string name="track">Track</string>
    <string name="call">Call</string>
    <string name="arrivingIn">Arriving in</string>
    <string name="support">Support</string>
    <string name="viewYourActivePromos">View your active promos</string>
    <string name="increaseOrder">Increases orders and average order value. Works well for all kinds of customers</string>
    <string name="bestValuePromotion">Best value promo inside</string>
    <string name="percentageOff">Percentage (%) off on order</string>
    <string name="findValueDisc">Find value discount</string>
    <string name="increaseOrderSaving">Increases orders and ideal for savings oriented customers.</string>
    <string name="buyGet">Buy 1 - Get 1</string>
    <string name="attackParty">Attracts party and family orders. Boost new customers.</string>
    <string name="complimentary">Complimentary item</string>
    <string name="delightsRepeat">Delights repeat customer and boosts loyalty, ideal during festivals.</string>
    <string name="orderHistory">Order History</string>
    <string name="delivered">Delivered</string>
    <string name="search">Search</string>
    <string name="allItems">All Items</string>
    <string name="outOfStock">Out of Stock</string>
    <string name="bestSeller">Best Seller</string>
    <string name="storeName">Store Name</string>
    <string name="itemAUnavailable">Item Unavailable</string>
    <string name="recommended">Recommended</string>
    <string name="feedback">Feedback</string>
    <string name="totalBillC">Total Bill :</string>
    <string name="viewRating">View Rating</string>
    <string name="giveRatingCustomer">Give Rating to Your Customer</string>
    <string name="writeComment">Write a Comment</string>
    <string name="reply">Reply</string>
    <string name="itemFullName">Item Full Name</string>
    <string name="category">Category</string>
    <string name="color">Color</string>
    <string name="colorRequire">Color*</string>
    <string name="productType">Product Type</string>
    <string name="price">Price</string>
    <string name="priceRequire">Price*</string>
    <string name="material">Material</string>
    <string name="gender">Gender</string>
    <string name="brandName">Brand Name</string>
    <string name="description">Description</string>
    <string name="message">Message</string>
    <string name="addSizes">Add Sizes</string>
    <string name="addPlus">Add +</string>
    <string name="productImages">Product Images*</string>
    <string name="dropImagesHere">Drop your image here, or select</string>
    <string name="clickBrowse">Click to browse</string>
    <string name="bankDetails">Bank Details</string>
    <string name="accountHolderName">Account Holder Name</string>
    <string name="bankName">Bank Name</string>
    <string name="accountNumber">Account Number</string>
    <string name="confirmAccountNotMatch">Confirm account number does not match</string>
    <string name="ifscCode">IFSC Code</string>
    <string name="branch">Branch</string>
    <string name="saveChanges">Save Changes</string>
    <string name="pleaseEnterName">Please enter name</string>
    <string name="pleaseEnterMobile">Please enter mobile number</string>
    <string name="pleaseEnterCorrectEmail">Please enter correct email address</string>
    <string name="pleaseEnterPassword">Please enter password</string>
    <string name="confirmPasswordNotMatch">Confirm password does not match</string>
    <string name="login">Login</string>
    <string name="pleaseEnterPin">Please enter PIN</string>
    <string name="confirmPinNotMatch">Confirm PIN does not match</string>
    <string name="resendOtp">Resend OTP</string>
    <string name="pleaseEnterOtp">Please enter OTP</string>
    <string name="otp">OTP</string>
    <string name="success">Success</string>
    <string name="areYouSureLogout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="bankAccountDetails">Bank Account Details</string>
    <string name="creditDebitCard">Credit/Debit Card</string>
    <string name="pleaseEnterBankName">Please enter Bank Name</string>
    <string name="pleaseEnterAccountNumber">Please enter Account Number</string>
    <string name="accountNumberErrorMin">Account Number should be at least 9 digits</string>
    <string name="accountNumberErrorMax">Account Number should be at least 17 digits</string>
    <string name="accountNumberEmptyError">Account Number should not be empty</string>
    <string name="EnterValidAccountNumber">Please enter valid Account Number</string>
    <string name="pleaseEnterIfsc">Please enter IFSC code</string>
    <string name="EnterValidIfsc">Please enter valid IFSC code</string>
    <string name="fullName">Full Name</string>
    <string name="pinCode">Pincode</string>
    <string name="enterYourEmail">Enter Your Email</string>
    <string name="addEmail">Add Email</string>
    <string name="enterYourName">Enter Your Name</string>
    <string name="estYear">Establishment Year*</string>
    <string name="selectYear">Select Year</string>
    <string name="addressA">Address*</string>
    <string name="enterAddress">Enter Address</string>
    <string name="landmark">Landmark</string>
    <string name="businessHours">Business Hours*</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="enterGstin">Enter GSTIN</string>
    <string name="fssaiLicenseOpt">FSSAI License (Optional)</string>
    <string name="enterFssaiNum">Enter FSSAI Number</string>
    <string name="enterLicenseNo">Enter License No</string>
    <string name="modes">Modes*</string>
    <string name="homeDelivery">Home Delivery</string>
    <string name="takeaway">Takeaway</string>
    <string name="dineIn">Dine - In</string>
    <string name="save">Save</string>
    <string name="addImage">Add Image</string>
    <string name="businessImages">Business Images*</string>
    <string name="gstinOpt">GSTIN (Optional)</string>
    <string name="businessName">Business Name*</string>
    <string name="licenseNoOpt">License No (Optional)</string>
</resources>