<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:ignore="SpUsage"
    tools:context="code.basic.SignUpActivity"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:src="@mipmap/bg_circle_yellow"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/_220sdp"/>

    <ImageView
        android:id="@+id/ivTop"
        android:layout_width="match_parent"
        android:src="@mipmap/login_top"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_height="@dimen/_200sdp"/>



    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_above="@+id/etName"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/enterYourName"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv2"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/et_rectangular_border"
        android:hint="@string/fullName"
        android:digits="@string/digits"
        android:inputType="textEmailAddress"
        android:maxLength="75"
        android:padding="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_above="@+id/etEmail"
        android:fontFamily="@font/fira_sans_medium"
        android:text="@string/enterYourEmail"
        android:textColor="@color/textBlack"
        android:textSize="@dimen/_15sdp"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvContinue"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_85sdp"
        android:background="@drawable/et_rectangular_border"
        android:hint="@string/addEmail"
        android:inputType="textEmailAddress"
        android:maxLength="75"
        android:padding="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tvContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/btn_rectangular"
        android:fontFamily="@font/fira_sans_sem_bold"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/continuee"
        android:textColor="@color/black"
        android:textSize="@dimen/_13sdp" />

</RelativeLayout>