<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="SpUsage">

    <include
        android:id="@+id/header"
        layout="@layout/inflate_header2" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/businessName"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:inputType="textCapSentences"
                android:maxLength="100"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/estYear"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/selectYear"
                android:padding="@dimen/_10sdp"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/addressA"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/enterAddress"
                android:inputType="textCapSentences"
                android:maxLength="100"
                android:padding="@dimen/_8sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/etLandmark"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_rectangular_border"
                    android:fontFamily="@font/fira_sans_regular"
                    android:hint="@string/landmark"
                    android:inputType="textCapSentences"
                    android:maxLength="100"
                    android:padding="@dimen/_8sdp" />

                <EditText
                    android:id="@+id/etPinCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_rectangular_border"
                    android:fontFamily="@font/fira_sans_regular"
                    android:hint="@string/pinCode"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="@dimen/_8sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/businessImages"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3" />

            <TextView
                android:id="@+id/tvAddImage"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_rectangular"
                android:backgroundTint="@color/blue"
                android:fontFamily="@font/fira_sans_sem_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/addImage"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/businessHours"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                <TextView
                    android:id="@+id/tvStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_rectangular_border"
                    android:fontFamily="@font/fira_sans_regular"
                    android:hint="@string/startTime"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/_14sdp" />

                <TextView
                    android:id="@+id/tvEndTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_weight="1"
                    android:background="@drawable/et_rectangular_border"
                    android:fontFamily="@font/fira_sans_regular"
                    android:hint="@string/endTime"
                    android:padding="@dimen/_8sdp"
                    android:textColor="@color/textBlack"
                    android:textSize="@dimen/_14sdp" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/gstinOpt"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/etGst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/enterGstin"
                android:inputType="textCapSentences"
                android:maxLength="15"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/fssaiLicenseOpt"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/etFssai"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/enterFssaiNum"
                android:inputType="textCapSentences"
                android:padding="@dimen/_8sdp" />
  <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/licenseNoOpt"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp" />

            <EditText
                android:id="@+id/etLicenseNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:fontFamily="@font/fira_sans_regular"
                android:hint="@string/enterLicenseNo"
                android:inputType="textCapSentences"
                android:padding="@dimen/_8sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/fira_sans_regular"
                android:text="@string/modes"
                android:textColor="@color/textBlack"
                android:textSize="@dimen/_11sdp"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:background="@drawable/et_rectangular_border"
                android:orientation="vertical"
                android:visibility="gone">

                <RelativeLayout
                    android:id="@+id/rlHome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/fira_sans_regular"
                        android:text="@string/homeDelivery"
                        android:textColor="@color/textBlack"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/ivHomeDelivery"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_radio_button_checked" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_grey" />

                <RelativeLayout
                    android:id="@+id/rlTakeaway"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/fira_sans_regular"
                        android:text="@string/takeaway"
                        android:textColor="@color/textBlack"
                        android:textSize="@dimen/_12sdp" />

                    <ImageView
                        android:id="@+id/ivTakeaway"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_radio_button_unchecked" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bg_grey" />

                <RelativeLayout
                    android:id="@+id/rlDineIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_8sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:fontFamily="@font/fira_sans_regular"
                        android:text="@string/dineIn"
                        android:textColor="@color/textBlack"
                        android:textSize="@dimen/_13sdp" />

                    <ImageView
                        android:id="@+id/ivvDineIn"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_radio_button_unchecked" />

                </RelativeLayout>

            </LinearLayout>


            <TextView
                android:id="@+id/tvSave"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/btn_rectangular_less_radius"
                android:fontFamily="@font/fira_sans_sem_bold"
                android:gravity="center"
                android:padding="@dimen/_8sdp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

    </ScrollView>


</LinearLayout>